<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/visaGuideBackground"
    tools:context=".GuideActivity">

    <!-- Guide card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardGuide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="72dp"
        app:cardCornerRadius="26dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="?attr/visaCardLightSoftColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="22dp">

            <TextView
                android:id="@+id/txtGuideTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontFamily="@font/dmsans_extrabold"
                android:text="@string/guide_title"
                android:textColor="?attr/visaTextDarkSoftColor"
                android:textSize="35sp"
                android:letterSpacing="0.02" />

            <TextView
                android:id="@+id/txtGuideBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontFamily="@font/dmsans_extrabold"
                android:layout_marginTop="20dp"
                android:text="@string/guide_body"
                android:textColor="?attr/visaTextDarkSoftColor"
                android:textSize="28sp"
                android:lineSpacingExtra="5dp"
                android:letterSpacing="0.01" />

            <TextView
                android:id="@+id/txtGuideNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontFamily="@font/dmsans_extrabold"
                android:layout_marginTop="25dp"
                android:text="@string/guide_note"
                android:textColor="?attr/visaTextDarkSoftColor"
                android:textSize="23sp"/>

            <Button
                android:id="@+id/btnGoBack"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                app:fontFamily="@font/dmsans_extrabold"
                android:text="@string/guide_go_back"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:textColor="?attr/visaBtnTextColor"
                app:backgroundTint="@null"
                android:background="@drawable/bg_round_button" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>