<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/suggestionContainer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="14dp"
    app:cardElevation="10dp"
    android:background="@drawable/bg_dialog">

    <LinearLayout
        android:id="@+id/suggestionHeaderRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top">

        <ImageView
            android:id="@+id/visaIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_hap_visa"
            android:scaleType="fitCenter"
            android:contentDescription="Assistant icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSuggestionMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@font/lexend_regular"
            android:maxWidth="160dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/speech_body"
            android:textColor="?attr/visaTextDarkSoftColor"
            android:textSize="16sp"
            android:lineSpacingExtra="3dp" />

        <ImageView
            android:id="@+id/btnSpeak"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="6dp"
            android:src="@drawable/ic_speaker"
            app:tint="@color/visa_highlight_icon"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="Read this message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/suggestionButtonRow"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnDoMyself"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            app:fontFamily="@font/lexend_semibold"
            android:gravity="center"
            android:text="@string/do_myself"
            android:textColor="?attr/visaBtnMainColor"
            android:textSize="15sp"
            android:background="@drawable/bg_square_secondary_button"
            android:clickable="true"
            android:focusable="true" />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnDoAction"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/execute"
            android:textColor="?attr/visaBtnTextColor"
            android:textSize="15sp"
            android:background="@drawable/bg_square_button"
            android:clickable="true"
            android:focusable="true"
            app:fontFamily="@font/lexend_semibold" />

    </LinearLayout>

</LinearLayout>